--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,6 @@
 {erl_opts, [debug_info, warnings_as_errors, warn_export_all]}.
-{deps, [erloom]}.
+{deps,
+ [{'erlkit', ".*",
+   {git, "git@github.com:jflatow/erlkit.git", "master"}},
+  {'erloom', ".*",
+   {git, "git@github.com:jflatow/erloom.git", "master"}}]}.
