--- a/rebar.config
+++ b/rebar.config
@@ -3,4 +3,8 @@
  [{'erlkit', ".*",
    {git, "git@github.com:jflatow/erlkit.git", "master"}},
   {'erloom', ".*",
-   {git, "git@github.com:jflatow/erloom.git", "master"}}]}.
+   {git, "git@github.com:jflatow/erloom.git", "master"}},
+  {'jfdb', ".*",
+   {git, "git@github.com:jflatow/jfdb.git", "master"}, [raw]}]}.
+{pre_hooks,
+ [{compile, "make -C deps/jfdb erlang"}]}.
