deps -> $REBAR_DEPS_DIR

--- a/rebar.config
+++ b/rebar.config
@@ -7,4 +7,4 @@
   {'jfdb', ".*",
    {git, "git@github.com:jflatow/jfdb.git", "master"}, [raw]}]}.
 {pre_hooks,
- [{compile, "make -C deps/jfdb erlang"}]}.
+ [{compile, "make -C $REBAR_DEPS_DIR/jfdb erlang"}]}.
